--- a/usenix/design.tex
+++ b/usenix/design.tex
@@ -29,22 +29,22 @@ are
 stored, how the exit proxies authenticate themselves to origin servers, and how these 
 keys are distributed.
 
-\begin{table}[t!]
-\footnotesize
-\centering
-\begin{tabular}{ p{1.15in}  p{1.8in} } 
- \multicolumn{1}{c}{\bf Design Decision} & \multicolumn{1}{c}{\bf Function} \\
-\hline \hline
- Shared Keys & {Hides content on cache nodes from CDN.} \\
- Consistent Hashing & {Load balance requests across proxies; ensure no proxy can
- control a given URL.} \\
- Self-Certifying Identifiers & {Authenticates exit proxies to origin servers.} \\
- DNS for Key Sharing & {Allows origin server to share shared keys with exit
- proxies.} \\ \hline
-\end{tabular}
-\caption{Design decisions associated with hiding content from a CDN.}
-\label{tab:setup}
-\end{table}
+%\begin{table}[t!]
+%\footnotesize
+%\centering
+%\begin{tabular}{ p{1.15in}  p{1.8in} } 
+% \multicolumn{1}{c}{\bf Design Decision} & \multicolumn{1}{c}{\bf Function} \\
+%\hline \hline
+% Shared Keys & {Hides content on cache nodes from CDN.} \\
+% Consistent Hashing & {Load balance requests across proxies; ensure no proxy can
+% control a given URL.} \\
+% Self-Certifying Identifiers & {Authenticates exit proxies to origin servers.} \\
+% DNS for Key Sharing & {Allows origin server to share shared keys with exit
+% proxies.} \\ \hline
+%\end{tabular}
+%\caption{Design decisions associated with hiding content from a CDN.}
+%\label{tab:setup}
+%\end{table}
 
 \textbf{Shared Keys.} 
 To prevent an adversary from learning information, the CDN must not know anything
@@ -124,23 +124,23 @@ hashing circle.  If the verification is successful, then the authoritative DNS s
 under the exit proxy's public key, \{$k$\}$_{PK_{exit}}$ in the SRV record of the DNS response.  The exit proxy 
 extracts $k$ by decrypting with its private key, and stores it in its hash table.
 
-\begin{table}[t!]
-\footnotesize
-\centering
-\begin{tabular}{ l  p{1.8in} } 
- \multicolumn{1}{c}{\bf Design Decision} & \multicolumn{1}{c}{\bf Function} \\
-\hline \hline
-Spoofed Source Routes & {Hides origin of client request from other
- clients, exit proxies, and CDN.} \\
- Session Keys & {Hides URL and response from other clients.} \\
- Multicast Response & {Allows CDN to return content directly to client without knowing
- the client that requested the content.} \\
- \hline
-\end{tabular}
-\caption{The design decisions associated with content requests and responses, and what these 
-decisions provide.}
-\label{tab:request_response}
-\end{table}
+%\begin{table}[t!]
+%\footnotesize
+%\centering
+%\begin{tabular}{ l  p{1.8in} } 
+% \multicolumn{1}{c}{\bf Design Decision} & \multicolumn{1}{c}{\bf Function} \\
+%\hline \hline
+%Spoofed Source Routes & {Hides origin of client request from other
+% clients, exit proxies, and CDN.} \\
+% Session Keys & {Hides URL and response from other clients.} \\
+% Multicast Response & {Allows CDN to return content directly to client without knowing
+% the client that requested the content.} \\
+% \hline
+%\end{tabular}
+%\caption{The design decisions associated with content requests and responses, and what these 
+%decisions provide.}
+%\label{tab:request_response}
+%\end{table}
 
 \subsection{Hiding Clients}
 \label{sec:hiding_clients}
