--- a/usenix/related_work.tex
+++ b/usenix/related_work.tex
@@ -12,7 +12,7 @@ the server with data records from the cache (in the proxy) --- to maintain the
 integrity of content being served by a proxy~\cite{lesniewski2005ssl}.  While this work does not 
 explicitly apply SSL-splitting to CDNs, it is a technique that could be used for content 
 distribution.  Michalakis et al., present a system for ensuring content integrity for untrusted 
-peer-to-peer content delivery networks~\cite{michalakis2007ensuring}.  This system, Repeat and 
+peer-to-peer CDNs~\cite{michalakis2007ensuring}.  This system, Repeat and 
 Compare, use attestation records and a number of peers act as verifiers.  More recently, Levy et al., 
 introduced Stickler, which is a system that allows content publishers to guarantee the end-to-end 
 authenticity of their content to users~\cite{levy2015stickler}.  Stickler includes content publishers 
