--- a/usenix/paper.bib
+++ b/usenix/paper.bib
@@ -25,6 +25,23 @@
   school={Massachusetts Institute of Technology}
 }
 
+@inproceedings{wright2009traffic,
+  title={Traffic Morphing: An Efficient Defense Against Statistical Traffic Analysis.},
+  author={Wright, Charles V and Coull, Scott E and Monrose, Fabian},
+  booktitle={NDSS},
+  volume={9},
+  year={2009}
+}
+
+@inproceedings{rackoff1993cryptographic,
+  title={Cryptographic defense against traffic analysis},
+  author={Rackoff, Charles and Simon, Daniel R},
+  booktitle={Proceedings of the twenty-fifth annual ACM symposium on Theory of computing},
+  pages={672--681},
+  year={1993},
+  organization={ACM}
+}
+
 @inproceedings{gupta2016scalable,
   title={Scalable and Private Media Consumption with Popcorn.},
   author={Gupta, Trinabh and Crooks, Natacha and Mulhern, Whitney and Setty, Srinath TV and Alvisi, Lorenzo and Walfish, Michael},
