--- a/usenix/security.tex
+++ b/usenix/security.tex
@@ -62,7 +62,7 @@ different requests from different clients and then forwarding the requests on to
 These exit proxies should mix the requests enough that the CDN cannot conduct traffic analysis
  and determine which request corresponds to which content on the CDN's cache nodes.  There has 
 also been numerous studies that have proposed and evaluated defenses against traffic 
-analysis attacks~\cite{xx}; \system{} could implement one of these solutions at the exit 
+analysis attacks~\cite{wright2009traffic,rackoff1993cryptographic}; \system{} could implement one of these solutions at the exit 
 proxy.
 
 \textbf{Spoofed Content Updates.} Because the CDN cache
