--- a/usenix/intro.tex
+++ b/usenix/intro.tex
@@ -11,7 +11,7 @@
 %for example, highlights the possibility that governments may move data across
 %borders to facilitate surveillance~\cite{arnbak2015loopholes}.  
 
-As Content Distribution Networks (CDNs) host an increasing amount of content, they are fast becoming targets of requests for information about their content and who is requesting it, as well as requests for takedown of material ranging from alleged copyright violations to offensive content. The shifting legal and political landscape suggests that CDNs may soon face liability for the content that they host. For example, the European Union has been considering laws that would remove safe harbor protection on copyright infringement for online service providers if they do not deploy tools that can automatically inspect and remove infringing content~\cite{eu-copyright}. In the United States, various laws under consideration threaten aspects of Section 230 of the Communications Decency Act, which protects CDNs from federal criminal liability for the content that they host. Tussles surrounding speech, from copyright violations to hate speech, are currently being addressed in the courts, yet the legal outcomes remain ambiguous and uncertain, sometimes with courts issuing opposing rulings in different cases. Regardless of these outcomes, however, CDNs are increasingly in need of {\em technical} protections against the liability they might face as a result of content that they (perhaps unwittingly) serve.
+As Content Distribution Networks (CDNs) host an increasing amount of content, they are fast becoming targets of requests for information about their content and who is requesting it, as well as requests for takedown of material ranging from alleged copyright violations to offensive content. The shifting legal and political landscape suggests that CDNs may soon face liability for the content that they host. For example, the European Union has been considering laws that would remove safe harbor protection on copyright infringement for online service providers if they do not deploy tools that can automatically inspect and remove infringing content~\cite{eu-copyright}. In the United States, various laws under consideration threaten aspects of Section 230 of the Communications Decency Act~\cite{sec230}, which protects CDNs from federal criminal liability for the content that they host. Tussles surrounding speech, from copyright violations to hate speech, are currently being addressed in the courts, yet the legal outcomes remain ambiguous and uncertain, sometimes with courts issuing opposing rulings in different cases. Regardless of these outcomes, however, CDNs are increasingly in need of {\em technical} protections against the liability they might face as a result of content that they (perhaps unwittingly) serve.
 
 Towards this end, we design and implement a system that allows clients to
 retrieve web objects from one or more CDNs, while preventing the CDNs from
@@ -22,10 +22,10 @@ storing and the content that clients request.
 \system{} allows clients to request objects with identifiers that
 are encrypted with a key that is shared by an open proxy and the origin server
 that publishes content to cache nodes, but is not known to any of the CDN
-cache nodes.  To do so, the origin server publishes content obfuscated with a
-shared key, which is subsequently shared with a proxy that is responsible for
+cache nodes.  To do so, the origin server publishes encrypted content, 
+which is subsequently shared with a proxy that is responsible for
 routing requests for objects corresponding to that URL.  A client forwards a
-request for content through a set of peers (\ie, other OCDN clients) in a way
+request for content through other OCDN clients in a way
 that prevents both other clients and the CDN from learning the client
 identity or requested content.  Using \system{} requires only minimal modification to existing clients; clients can also configure aspects of the system to trade off performance for privacy.
 
@@ -43,7 +43,7 @@ whereby an adversary can request logs from the CDN, interact with \system{} as
 a client, a proxy, or a publisher, and mount coordinated attacks that depend on
 multiple such capabilities. Our threat model does not include active attempts
 to disrupt the system (\eg, blocking access to parts of the system, mounting
-denial of service attacks), but it includes essentially any type of attack
+denial of service attacks), but it includes any type of attack
 that involves observing traffic and even directly interacting with the system
 as a client or a publisher.
 
