--- a/usenix/paper.bib
+++ b/usenix/paper.bib
@@ -9,6 +9,12 @@
   publisher={IEEE Press}
 }
 
+@misc{sec230,
+  title = "{47 U.S. Code § 230 - Protection for private blocking and screening of offensive material}",
+  key = "{47}",
+  howpublished = {\url{https://www.law.cornell.edu/uscode/text/47/230}}
+}
+
 @inproceedings{karger1997consistent,
   title={Consistent hashing and random trees: Distributed caching protocols for relieving hot spots on the World Wide Web},
   author={Karger, David and Lehman, Eric and Leighton, Tom and Panigrahy, Rina and Levine, Matthew and Lewin, Daniel},
