--- a/oakland/paper.tex
+++ b/oakland/paper.tex
@@ -20,8 +20,8 @@
 \date{}
 \title{\LARGE{\bf OCDN: Oblivious Content Distribution Networks}}
 \author{
-\aufnt{} \\
-\affaddr{}
+\aufnt{Anne Edmundson, Paul Schmitt, Nick Feamster, Jennifer Rexford} \\
+\affaddr{Princeton University}
 }
 
 %%%%%%%%%%%%%%%%%%%%  START OF DOCUMENT  %%%%%%%%%%%%%%%%%
