--- a/usenix/design.tex
+++ b/usenix/design.tex
@@ -1,4 +1,4 @@
-\section{Design}
+\section{\system{} Design}
 \label{sec:design}
 
 \system{} that provides oblivious content distribution and  
@@ -251,9 +251,9 @@ latency for sending the response to the client.
 %exit proxies will be updated.  This allows for the load to be split among more proxies and 
 %increases the geographic diversity of the exit proxies.  
 
-\subsection{Additional Options}
-Up to this point, we have discussed how \system{} is designed in the general case.  Here we describe some 
-additional options that \system{}'s design can include.
+\subsection{Design Enhancements}
+
+We discuss possible enhancements to \system{}'s basic design.
 
 %\textbf{Multiple CDNs.}
 %While describing the design decisions that went into \system{}, we referred to a single CDN for 
